Reverted product/content link from activation key and environments
- ActivationKey no longer references products directly, instead
  referencing products by Red Hat product ID
- Environment no longer references content directly, instead
  referencing content by Red Hat content ID
- Removed the ActivationKey and Environment entity remapping logic
  from org refresh and product/content update flows
- Internal entity model API improvements, cleanup, and changes
- Removed some long-unused code