@@ -14,322 +14,359 @@
  */
 package org.candlepin.resource.util;
 
-import static java.util.Map.entry;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.anyCollection;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.anyIterable;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
-import org.candlepin.model.Consumer;
 import org.candlepin.model.EntitlementCurator;
 import org.candlepin.model.EnvironmentContentCurator;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
-import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.mockito.stubbing.Answer;
 
-import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Stream;
+
+
 
 @ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
 public class EntitlementEnvironmentFilterTest {
-    @Mock
-    private EntitlementCurator entitlementCurator;
-    @Mock
-    private EnvironmentContentCurator environmentContentCurator;
-    private Consumer consumer;
+    private EntitlementCurator mockEntitlementCurator;
+    private EnvironmentContentCurator mockEnvironmentContentCurator;
+
+    private final Map<String, Set<String>> consumerEntitlementIdMap = new HashMap<>();
+    private final Map<String, Set<String>> entitlementContentIdMap = new HashMap<>();
+    private final Map<String, Set<String>> environmentContentIdMap = new HashMap<>();
 
     @BeforeEach
-    void setUp() {
-        this.consumer = createConsumer(1);
+    public void setUp() {
+        this.consumerEntitlementIdMap.clear();
+        this.entitlementContentIdMap.clear();
+        this.environmentContentIdMap.clear();
+
+        this.mockEntitlementCurator = mock(EntitlementCurator.class);
+        this.mockEnvironmentContentCurator = mock(EnvironmentContentCurator.class);
+
+        doAnswer(iom -> {
+            Map<String, String> output = new HashMap<>();
+            Iterable<String> input = iom.getArgument(0);
+
+            for (String consumerId : input) {
+                this.consumerEntitlementIdMap.getOrDefault(consumerId, Set.of())
+                    .forEach(entitlementId -> output.put(entitlementId, consumerId));
+            }
+
+            return output;
+        }).when(this.mockEntitlementCurator).getEntitlementConsumerIdMap(anyIterable());
+
+        doAnswer(this.buildMapAnswer(this.entitlementContentIdMap))
+            .when(this.mockEntitlementCurator).getEntitlementContentIdMap(anyIterable());
+
+        doAnswer(this.buildMapAnswer(this.environmentContentIdMap))
+            .when(this.mockEnvironmentContentCurator).getEnvironmentContentIdMap(anyIterable());
     }
 
-    @ParameterizedTest
-    @MethodSource("addedDetectChange")
-    public void shouldDetectEntitlementOfAddedEnvironment(List<String> currentEnvs,
-        List<String> updatedEnvs) {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2", "c3"))
-        );
-        when(this.entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    private Answer<Map<String, Set<String>>> buildMapAnswer(Map<String, Set<String>> source) {
+        return iom -> {
+            Map<String, Set<String>> output = new HashMap<>();
+            Iterable<String> input = iom.getArgument(0);
 
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1")),
-            entry("envB", List.of("c2")),
-            entry("envC", List.of("c1"))
-        );
-        when(this.environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
+            for (String element : input) {
+                if (source.containsKey(element)) {
+                    output.put(element, source.get(element));
+                }
+            }
 
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), currentEnvs, updatedEnvs);
-        Set<String> filteredEnt1 = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-
-        assertEquals(filteredEnt1.size(), 1);
-        assertTrue(filteredEnt1.contains("ent1"));
+            return output;
+        };
     }
 
-    public static Stream<Arguments> addedDetectChange() {
-        return Stream.of(
-            // EnvB added with Higher priority
-            // EnvA & EnvB both have different content
-            Arguments.of(List.of("envA"), List.of("envB", "envA")),
-            // EnvB added with Lower priority
-            // EnvA & EnvB both have different content
-            Arguments.of(List.of("envA"), List.of("envA", "envB")),
-            // EnvC is added with Higher priority
-            // EnvA (low) & EnvC (high) both have same content
-            Arguments.of(List.of("envA"), List.of("envC", "envA"))
-        );
+    private EntitlementEnvironmentFilter buildEEFilter() {
+        return new EntitlementEnvironmentFilter(this.mockEntitlementCurator,
+            this.mockEnvironmentContentCurator);
+    }
+
+    private void mapConsumerToEntitlements(String consumerId, String... entitlementIds) {
+        for (String entitlementId : entitlementIds) {
+            this.consumerEntitlementIdMap.computeIfAbsent(consumerId, (key) -> new HashSet<>())
+                .add(entitlementId);
+        }
+    }
+
+    private void mapEntitlementToContent(String entitlementId, String... contentIds) {
+        for (String contentId : contentIds) {
+            this.entitlementContentIdMap.computeIfAbsent(entitlementId, (key) -> new HashSet<>())
+                .add(contentId);
+        }
+    }
+
+    private void mapEnvironmentToContent(String environmentId, String... contentIds) {
+        for (String contentId : contentIds) {
+            this.environmentContentIdMap.computeIfAbsent(environmentId, (key) -> new HashSet<>())
+                .add(contentId);
+        }
+    }
+
+
+    @Test
+    public void testEEFRequiresNonNullInput() {
+        EntitlementEnvironmentFilter filter = this.buildEEFilter();
+
+        assertThrows(IllegalArgumentException.class, () -> filter.filterEntitlements(null));
     }
 
     @Test
-    public void shouldSkipEntitlementOfAddedEnvironmentWithSameContent() {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2", "c3"))
-        );
-        when(this.entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    public void testEEFReturnsEmptySetOnEmptyInput() {
+        EntitlementEnvironmentFilter filter = this.buildEEFilter();
 
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1")),
-            entry("envB", List.of("c2")),
-            entry("envC", List.of("c1"))
-        );
-        when(this.environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
+        Set<String> output = this.buildEEFilter().filterEntitlements(new EnvironmentUpdates());
 
-        // EnvC is added with lower priority
-        // EnvA (high) & EnvC (low) both have same content
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), List.of("envA"), List.of("envA", "envC"));
-
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-        assertEquals(filteredEnt.size(), 0);
-
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
     }
 
-    @ParameterizedTest
-    @MethodSource("removedDetectChange")
-    public void shouldDetectEntitlementOfRemovedEnvironment(List<String> currentEnvs,
-        List<String> updatedEnvs) {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2", "c3"))
-        );
-        when(entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    // Tests for adding environments
+    @Test
+    public void testEEFReportsChangeWhenAddingEnvironmentWithNewEntitlementContent() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2", "c3");
+        this.mapEntitlementToContent("ent2", "c1", "c2");
+        this.mapEnvironmentToContent("env1", "c1");
+        this.mapEnvironmentToContent("env2", "c2");
+        this.mapEnvironmentToContent("env3", "c3");
 
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1")),
-            entry("envB", List.of("c2")),
-            entry("envC", List.of("c1"))
-        );
-        when(environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2"), List.of("env1", "env2", "env3"));
 
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), currentEnvs, updatedEnvs);
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
 
-        assertEquals(filteredEnt.size(), 1);
-        assertTrue(filteredEnt.contains("ent1"));
-    }
-
-    public static Stream<Arguments> removedDetectChange() {
-        return Stream.of(
-            // EnvA of higher priority is being removed
-            // envA & envB have different content
-            Arguments.of(List.of("envA", "envB"), List.of("envB")),
-            // EnvB of lower priority is being removed
-            // envA & envB have different content
-            Arguments.of(List.of("envA", "envB"), List.of("envA")),
-            // EnvC of higher priority is being removed
-            // EnvC provides content same as envA
-            Arguments.of(List.of("envC", "envA"), List.of("envA"))
-        );
-    }
-
-    @ParameterizedTest
-    @MethodSource("removedIgnoreChange")
-    public void shouldSkipEntitlementOfRemovedEnvironmentWithSameContent(
-        List<String> currentEnvs, List<String> updatedEnvs) {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2", "c3"))
-        );
-        when(entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
-
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1")),
-            entry("envB", List.of("c2")),
-            entry("envC", List.of("c1"))
-        );
-        when(environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
-
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), currentEnvs, updatedEnvs);
-
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-        assertEquals(filteredEnt.size(), 0);
-    }
-
-    public static Stream<Arguments> removedIgnoreChange() {
-        return Stream.of(
-            // EnvC of lower priority is being removed
-            // EnvC provides content same as envA
-            Arguments.of(List.of("envA", "envB", "envC"), List.of("envA", "envB")),
-            // EnvC of Lower priority is being removed
-            // EnvC provides content same as envA
-            Arguments.of(List.of("envA", "envC"), List.of("envA"))
-        );
+        assertNotNull(output);
+        assertEquals(1, output.size());
+        assertTrue(output.contains("ent1"));
     }
 
     @Test
-    public void testWhenLowerPriorityEnvsReorderedProvidingSameContent() {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2", "c3"))
-        );
-        when(entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    public void testEEFReportsChangeWhenAddingEnvironmentProvidingExistingContentAtHigherPriority() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c3");
+        this.mapEnvironmentToContent("env3", "c2");
 
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1")),
-            entry("envB", List.of("c1")),
-            entry("envC", List.of("c1"))
-        );
-        when(environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2"), List.of("env3", "env1", "env2"));
 
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(),
-            List.of("envA", "envB", "envC"), List.of("envA", "envC", "envB"));
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
 
-        // Reordering lower priority (envB & envC) environments
-        // providing same contents
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-        assertEquals(filteredEnt.size(), 0);
+        assertNotNull(output);
+        assertEquals(1, output.size());
+        assertTrue(output.contains("ent1"));
     }
 
     @Test
-    public void testWhenEnvsAreReorderedProvidingDifferentContent() {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2", "c3"))
-        );
-        when(entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    public void testEEFIgnoresChangeWhenAddingEnvironmentProvidingExistingContentAtLowerPriority() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c3");
+        this.mapEnvironmentToContent("env3", "c2");
 
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1")),
-            entry("envB", List.of("c2"))
-        );
-        when(environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2"), List.of("env1", "env2", "env3"));
 
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), List.of("envA", "envB"), List.of("envB", "envA"));
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
 
-        // Priority of envB & envA are reversed
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-        assertEquals(filteredEnt.size(), 1);
-        assertTrue(filteredEnt.contains("ent1"));
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
     }
 
     @Test
-    public void testWhenHigherPriorityEnvironmentIsDeleted() {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2"))
-        );
-        when(entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    public void testEEFIgnoresChangeWhenAddingEnvironmentProvidingNoEntitlementContent() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c3");
+        this.mapEnvironmentToContent("env3", "c4");
 
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1", "c2")),
-            entry("envB", List.of("c1", "c2"))
-        );
-        when(environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2"), List.of("env3", "env1", "env2"));
 
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), List.of("envA", "envB"), List.of("envB"));
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
 
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-        assertEquals(filteredEnt.size(), 1);
-        assertTrue(filteredEnt.contains("ent1"));
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
+    }
+
+    // Tests for changing environments (reordering/reprioritization)
+    @Test
+    public void testEEFReportsChangeWhenHighestPrioEnvProvidingContentChanges() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c2", "c3");
+        this.mapEnvironmentToContent("env1", "c1");
+        this.mapEnvironmentToContent("env2", "c1");
+
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2"), List.of("env2", "env1"));
+
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
+
+        assertNotNull(output);
+        assertEquals(1, output.size());
+        assertTrue(output.contains("ent1"));
     }
 
     @Test
-    public void testEnvBeingAddedHasNoContent() {
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2"))
-        );
-        when(entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    public void testEEFIgnoresChangeWhenHighestPrioEnvProvidingNoEntitlementContentChanges() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapConsumerToEntitlements("consumer2", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c4");
+        this.mapEnvironmentToContent("env3", "c4");
 
-        Map<String, List<String>> id = Map.ofEntries(
-            entry("envA", List.of("c1", "c2")),
-            entry("envB", Collections.emptyList())
-        );
-        when(environmentContentCurator.getEnvironmentContentUUIDs(anyIterable())).thenReturn(id);
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2", "env3"), List.of("env1", "env3", "env2"))
+            .put("consumer2", List.of("env2", "env3", "env1"), List.of("env3", "env2", "env1"));
 
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), List.of("envA"), List.of("envB", "envA"));
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
 
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-
-        assertEquals(filteredEnt.size(), 0);
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
     }
 
     @Test
-    public void shouldHandleUpdateOfMultipleConsumersAtOnce() {
-        Consumer consumer2 = createConsumer(2);
-        Map<String, Set<String>> contentUUIDsConsumerIds = Map.ofEntries(
-            entry("ent1", Set.of("c1", "c2")),
-            entry("ent2", Set.of("c2", "c3")),
-            entry("ent3", Set.of("c4"))
-        );
-        when(entitlementCurator.getEntitlementContentUUIDs(anyCollection()))
-            .thenReturn(contentUUIDsConsumerIds);
+    public void testEEFIgnoresChangeWhenLowPriorityEnvsProvidingEntitlementContentChanges() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapConsumerToEntitlements("consumer2", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c2");
+        this.mapEnvironmentToContent("env3", "c2");
 
-        Map<String, List<String>> envContent = Map.ofEntries(
-            entry("envA", List.of("c1")),
-            entry("envB", List.of("c2")),
-            entry("envC", List.of("c3", "c4"))
-        );
-        when(environmentContentCurator.getEnvironmentContentUUIDs(anyIterable()))
-            .thenReturn(envContent);
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2", "env3"), List.of("env1", "env3", "env2"));
 
-        EnvironmentUpdates environmentUpdate = new EnvironmentUpdates();
-        environmentUpdate.put(consumer.getId(), List.of("envA", "envB"), List.of("envB"));
-        environmentUpdate.put(consumer2.getId(), List.of("envA", "envB"), List.of("envA"));
-        environmentUpdate.put(consumer2.getId(), List.of("envC"), List.of("envA"));
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
 
-        Set<String> filteredEnt = createEntitlementFilter()
-            .filterEntitlements(environmentUpdate);
-        assertEquals(filteredEnt.size(), 3);
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
     }
 
-    private EntitlementEnvironmentFilter createEntitlementFilter() {
-        return new EntitlementEnvironmentFilter(this.entitlementCurator,
-            this.environmentContentCurator);
+    @Test
+    public void testEEFIgnoresChangeWhenLowPriorityEnvsProvidingNoEntitlementContentChanges() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapConsumerToEntitlements("consumer2", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c4");
+        this.mapEnvironmentToContent("env3", "c4");
+
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2", "env3"), List.of("env1", "env3", "env2"));
+
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
+
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
     }
 
-    private Consumer createConsumer(int id) {
-        Consumer consumer = new Consumer();
-        consumer.setUuid("test_consumer_" + id);
-        consumer.setId("test_consumer_" + id);
-        return consumer;
+    // Tests for removing environments
+    @Test
+    public void testEEFReportsChangeWhenOnlyEnvironmentProvidingEntitlementContentIsRemoved() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2", "ent3");
+        this.mapConsumerToEntitlements("consumer2", "ent1", "ent2");
+        this.mapConsumerToEntitlements("consumer3", "ent1");
+        this.mapEntitlementToContent("ent1", "c1");
+        this.mapEntitlementToContent("ent2", "c2");
+        this.mapEntitlementToContent("ent3", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c1", "c2");
+        this.mapEnvironmentToContent("env3", "c3");
+
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2", "env3"), List.of("env1", "env2"));
+
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
+
+        assertNotNull(output);
+        assertEquals(1, output.size());
+        assertTrue(output.contains("ent3"));
     }
 
+    @Test
+    public void testEEFReportsChangeWhenHighestPriorityEnvProvidingContentIsRemoved() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2", "ent3");
+        this.mapConsumerToEntitlements("consumer2", "ent1", "ent2");
+        this.mapConsumerToEntitlements("consumer3", "ent1");
+        this.mapEntitlementToContent("ent1", "c1");
+        this.mapEntitlementToContent("ent2", "c2");
+        this.mapEntitlementToContent("ent3", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2", "c3");
+        this.mapEnvironmentToContent("env2", "c1", "c2");
+        this.mapEnvironmentToContent("env3", "c3");
+
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2", "env3"), List.of("env2", "env3"));
+
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
+
+        assertNotNull(output);
+        assertEquals(3, output.size());
+        assertEquals(Set.of("ent1", "ent2", "ent3"), output);
+    }
+
+    @Test
+    public void testEEFIgnoresChangeWhenLowPriorityEnvProvidingContentIsRemoved() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapConsumerToEntitlements("consumer2", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c3");
+        this.mapEnvironmentToContent("env3", "c1", "c2", "c3");
+
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2", "env3"), List.of("env1", "env2"))
+            .put("consumer2", List.of("env3", "env2", "env1"), List.of("env3"));
+
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
+
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
+    }
+
+    @Test
+    public void testEEFIgnoresChangeWhenEnvironmentProvidingNoEntitlementContentIsRemoved() {
+        this.mapConsumerToEntitlements("consumer1", "ent1", "ent2");
+        this.mapConsumerToEntitlements("consumer2", "ent1", "ent2");
+        this.mapEntitlementToContent("ent1", "c1", "c2");
+        this.mapEntitlementToContent("ent2", "c2", "c3");
+        this.mapEnvironmentToContent("env1", "c1", "c2");
+        this.mapEnvironmentToContent("env2", "c3");
+        this.mapEnvironmentToContent("env3", "c4");
+
+        EnvironmentUpdates updates = new EnvironmentUpdates()
+            .put("consumer1", List.of("env1", "env2", "env3"), List.of("env1", "env2"));
+
+        Set<String> output = this.buildEEFilter().filterEntitlements(updates);
+
+        assertNotNull(output);
+        assertTrue(output.isEmpty());
+    }
 }
